--- a/views/all.hbs
+++ b/views/all.hbs
@@ -6,10 +6,10 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2>Manage <b>Employees</b></h2>
+                        <h2>Manage <strong>Employees</strong></h2>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i
+                        <a href="http://localhost:3000/employee/new" class="btn btn-success"><i
                                 class="material-icons">&#xE147;</i> <span>Add New Employee</span></a>
                     </div>
                 </div>
@@ -17,6 +17,7 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>Name</th>
                         <th>Email</th>
                         <th>Address</th>
@@ -28,6 +29,7 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>1</td>
                         <td>Thomas Hardy</td>
                         <td>thomashardy@mail.com</td>
                         <td>89 Chiaroscuro Rd, Portland, USA</td>
