employee update form is added

--- a/views/all.hbs
+++ b/views/all.hbs
@@ -37,8 +37,8 @@
                         <td>Male</td>
                         <td class="text-success">Active</td>
                         <td>
-                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
-                                    data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="//localhost:3000/employee/update" class="edit"><i
+                                    class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                             <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons"
                                     data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
@@ -46,7 +46,7 @@
 
                 </tbody>
             </table>
-           
+
         </div>
     </div>
 </div>
