--- a/views/new.hbs
+++ b/views/new.hbs
@@ -15,14 +15,14 @@
 
                     <div class="card-body p-4 p-md-5">
 
-                        <form>
+                        <form action="//localhost:3000/employee/new" method="POST">
 
                             <div class="row">
                                 <div class="col-md-6 mb-4">
 
                                     <div class="form-outline">
                                         <label class="form-label" for="firstName">Full Name</label>
-                                        <input type="text" id="firstName" class="form-control form-control-lg" />
+                                        <input type="text" id="name" name="name" class="form-control form-control-lg" />
                                     </div>
 
                                 </div>
@@ -30,7 +30,8 @@
 
                                     <div class="form-outline">
                                         <label class="form-label" for="lastName">Email</label>
-                                        <input type="email" id="lastName" class="form-control form-control-lg" />
+                                        <input type="email" id="email" name="email"
+                                            class="form-control form-control-lg" />
 
                                     </div>
 
@@ -42,7 +43,8 @@
 
                                     <div class="form-outline datepicker w-100">
                                         <label for="birthdayDate" class="form-label">Address</label>
-                                        <input type="text" class="form-control form-control-lg" id="birthdayDate" />
+                                        <input type="text" class="form-control form-control-lg" id="address"
+                                            name="address" />
 
                                     </div>
 
@@ -56,58 +58,56 @@
 
                                     <div class="form-outline">
                                         <label class="form-label" for="phoneNumber">Phone Number</label>
-                                        <input type="tel" id="phoneNumber" class="form-control form-control-lg" />
+                                        <input type="tel" id="phone" name="phone"
+                                            class="form-control form-control-lg" />
 
                                     </div>
 
                                 </div>
                                 <div class="col-md-6 mb-4 pb-2">
-
+                                    <br /> <br />
                                     <div class="form-outline">
-                                        <label class="form-label" for="emailAddress">Gender</label> <br />
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gender"
-                                                id="maleRadio">
-                                            <label class="form-check-label" for="maleRadio">
-                                               Male
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gender"
-                                                id="femaleRadio" checked>
-                                            <label class="form-check-label" for="femaleRadio">
-                                                Female
-                                            </label>
-                                        </div>
+                                        <class="form-check">
+                                            <label class="form-label"
+                                                for="emailAddress"><strong>Gender:</strong></label>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+                                                class="form-check-input" type="radio" value="Male" name="gender"
+                                                id="maleRadio" checked />
+                                            <label class="form-check-label" for="maleRadio"> Male </label>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <input class="form-check-input" type="radio" name="gender" id="femaleRadio"
+                                                value="Female" />
+                                            <label class="form-check-label" for="femaleRadio"> Female</label>
                                     </div>
 
                                 </div>
-                            </div>
 
+                            </div>
                             <div class="row">
                                 <div class="col-12">
                                     <label class="form-label select-label">Choose option</label> &nbsp;
-                                    <select class="select form-control-md p-1 rounded" role="button">
-                                        <option value="1" disabled>Choose option</option>
-                                        <option value="2" class="text-success">Active</option>
-                                        <option value="3" class="text-danger">Not Active</option>
-                                    
+                                    <select class="select form-control-md p-1 rounded" role="button" name="active">
+                                        <option value="true" class="text-success">Active</option>
+                                        <option value="false" class="text-danger">Not Active</option>
+
                                     </select>
 
 
                                 </div>
                             </div>
 
+
                             <div class="mt-4 pt-2">
                                 <input class="btn btn-primary btn-lg" type="submit" value="Register"
                                     style="background-color: #435D7D; border: none" />
                             </div>
-
-                        </form>
                     </div>
+
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </section>
 
