--- a/views/update.hbs
+++ b/views/update.hbs
@@ -2,7 +2,7 @@
 
 <section class="gradient-custom">
     <h3 class="text-center"
-        style="background-color: #435D7D;color: white; padding: 5px 0px; font-family: 'Varela Round', sans-serif;">
+        style="background-color: #435D7D; color:white; padding: 5px 0px; font-family: 'Varela Round', sans-serif;">
         Update <strong>Employee</strong></h3>
     <div class="container py-5 h-100">
         <div class="row justify-content-center align-items-center h-100">
@@ -15,14 +15,15 @@
 
                     <div class="card-body p-4 p-md-5">
 
-                        <form>
+                        <form action="/employee/update/{{id}}" method="POST">
 
                             <div class="row">
                                 <div class="col-md-6 mb-4">
 
                                     <div class="form-outline">
                                         <label class="form-label" for="firstName">Full Name</label>
-                                        <input type="text" id="firstName" class="form-control form-control-lg" />
+                                        <input type="text" id="firstName" class="form-control form-control-lg"
+                                            value="{{name}}" name="name" />
                                     </div>
 
                                 </div>
@@ -30,7 +31,8 @@
 
                                     <div class="form-outline">
                                         <label class="form-label" for="lastName">Email</label>
-                                        <input type="email" id="lastName" class="form-control form-control-lg" />
+                                        <input type="email" id="lastName" class="form-control form-control-lg"
+                                            value="{{email}}" name="email" />
 
                                     </div>
 
@@ -42,7 +44,8 @@
 
                                     <div class="form-outline datepicker w-100">
                                         <label for="birthdayDate" class="form-label">Address</label>
-                                        <input type="text" class="form-control form-control-lg" id="birthdayDate" />
+                                        <input type="text" class="form-control form-control-lg" id="address"
+                                            value="{{address}}" name="address" />
 
                                     </div>
 
@@ -56,7 +59,8 @@
 
                                     <div class="form-outline">
                                         <label class="form-label" for="phoneNumber">Phone Number</label>
-                                        <input type="tel" id="phoneNumber" class="form-control form-control-lg" />
+                                        <input type="tel" id="phoneNumber" class="form-control form-control-lg"
+                                            value="{{phone}}" name="phone" />
 
                                     </div>
 
@@ -66,15 +70,13 @@
                                     <div class="form-outline">
                                         <label class="form-label" for="emailAddress">Gender</label> <br />
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gender"
-                                                id="maleRadio">
+                                            <input class="form-check-input" type="radio" name="gender" id="maleRadio" value="Male" />
                                             <label class="form-check-label" for="maleRadio">
-                                               Male
+                                                Male
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gender"
-                                                id="femaleRadio" checked>
+                                            <input class="form-check-input" type="radio" name="gender" id="femaleRadio" value="Female" />
                                             <label class="form-check-label" for="femaleRadio">
                                                 Female
                                             </label>
@@ -87,11 +89,10 @@
                             <div class="row">
                                 <div class="col-12">
                                     <label class="form-label select-label">Choose option</label> &nbsp;
-                                    <select class="select form-control-md p-1 rounded" role="button">
-                                        <option value="1" disabled>Choose option</option>
-                                        <option value="2" class="text-success">Active</option>
-                                        <option value="3" class="text-danger">Not Active</option>
-                                    
+                                    <select class="select form-control-md p-1 rounded" role="button" name="active">
+                                        <option class="text-success" value="true">Active</option>
+                                        <option class="text-danger" value="false">Not Active</option>
+
                                     </select>
 
 
